--- a/Template/index.html
+++ b/Template/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
+    style{
+    #wallet {
+      background: linear-gradient(rgba(0,0,0,0.6),rgb(0,0,0,0.6),)
 
+    }
+    }
+  </head>
   <body>
     <div>
       <h3 id="wallet">
         <!--SHOW CURRENT WALLET VALUE HERE, ONLY THE NUMBER SHOULD BE VISIBLE-->
+        
       </h3>
     </div>
 
